# arsbot

./: .editorconfig  .env.example  .flake8  .git-blame-ignore-revs  .gitignore  LICENSE  Makefile  README.md  alembic.ini  matrix_tests.sh  pyproject.toml
.github/workflows/: tests.yaml
etc/: arsbot.service.example  logger.yml
src/arsbot/: __init__.py  config.py  main.py  version.py
src/arsbot/core/: db.py  lock.py  logging.py
src/arsbot/discord/: __init__.py  bot_listener.py  const.py  db.py  run.py  utils.py  voice_log.py
src/arsbot/discord/mediawiki/: api_client.py  automod.py  channels.py  moderate_account.py  task.py  view.py
src/arsbot/discord/models/: __init__.py  mediawiki_account_request.py  phpbb_post_request.py
src/arsbot/discord/phpbb/: api_client.py  channels.py  moderate_post.py  task.py  view.py
src/arsbot/discord/slash_commands/: __init__.py  review_wiki_account.py
src/arsbot/mediawiki/: http2.py
src/arsbot/migrations/: env.py
src/arsbot/migrations/versions/: 0a220faa8141_init.py  42fd072da194_wiki_account_automod.py  60cdccb2bbcf_phpbb_table.py  9bac48f89f7f_add_automod_disabled_field.py
src/arsbot/models/: base.py  mediawiki_account_request.py  phpbb_post_request.py
src/arsbot/phpbb/: http.py
src/arsbot/utils/: ipinfo.py  text_table.py
tests/: conftest.py  test_config.py  test_logging.py  test_version.py
tests/core/: test_config.py  test_db.py  test_logging.py
tests/data/: ucp_login.html  ucp_login_error.html  ucp_login_fail.html  ucp_login_success.html  wiki_login_form.html  wiki_login_success.html
tests/discord/: test_db.py
tests/discord/mediawiki/: test_automod.py  test_moderate_account.py  test_task.py
tests/discord/models/: test_mediawiki_account_request.py  test_phpbb_post_request.py
tests/discord/phpbb/: test_api_client.py
tests/models/: test_mediawiki_account_request.py  test_phpbb_post_request.py
tests/phpbb/: conftest.py  test_http.py
tests/utils/: conftest.py  test_ipinfo.py  test_text_table.py
(+5 files in other folders)
